--- a/views/home.html
+++ b/views/home.html
@@ -1,6 +1,6 @@
-<body>
+
     
-    <header class="Pico">
+    <header class="Pico2">
         <h1 class="Pico2">Welcome To My Home Page</h1>
     </header>
     
@@ -9,5 +9,5 @@
     <p class="cute">Personal/Portfolio Website</p>
     <p class="Dark">To:<a class="CornDog"> IT24C Event Driven Programming (2023-2024)</a></p>
     <p class="Dark">By: <a class="CornDog">Angel Justine Ballaso</a></p>
-    </body>
+
     
