--- a/css/angel.css
+++ b/css/angel.css
@@ -1,4 +1,3 @@
-
 label[for='una'] {
     background: rgba(66, 166, 184, 0.692);
     color: rgb(255, 255, 255);
@@ -116,7 +115,7 @@ cursor: pointer;
     }
     
     input[type=checkbox] {
-        display: none;
+        display:none;
     }
     input[type=checkbox]:checked + .tap {
         display: block;
@@ -133,4 +132,8 @@ cursor: pointer;
     input[type=checkbox]:checked + .tap4 {
         display: block;
     }
+    * {
+        box-sizing: border-box;
+    }
+    
     
