--- a/views/likes.html
+++ b/views/likes.html
@@ -1,22 +1,22 @@
 
     <div class="tap-container">
         <label for='una'>Zedd</label>
-    <input id='checkbox1' type='checkbox' />
+    <input id='una' type='checkbox' />
     <div class="tap1">
     </div>
 
        <label for='duha'>Marshmellow</label>
-           <input id='checkbox2' type='checkbox' />
+           <input id='duha' type='checkbox' />
            <div class="tap2">
            </div>
 
        <label for='tulo'>Martin Garrix</label>
-           <input id='checkbox3' type='checkbox' />
+           <input id='tulo' type='checkbox' />
            <div class="tap3">
            </div>
        
        <label for='upat'>The Chainsmokers</label>
-           <input id='checkbox4' type='checkbox' />
+           <input id='upat' type='checkbox' />
            <div class="tap4"> 
            </div>
        </div>
