--- a/css/anseph.css
+++ b/css/anseph.css
@@ -24,7 +24,7 @@ nav{
     color: rgb(255, 255, 255);
     margin-right:800px;
     text-transform:uppercase;
-    
+    text-shadow: 0 0 5px rgb(255, 0, 157);
 }
 b{
     font-size: 40px;
@@ -40,6 +40,7 @@ b{
 .navItems li a{
     font-size: 25px;
 color: rgb(255, 255, 255);
+text-shadow: 0 0 5px rgb(255, 0, 157);
 letter-spacing: 3px;
 word-spacing: 10px;
 text-decoration: none;
@@ -91,15 +92,16 @@ animation: object2 6s linear infinite;
 .topline{
     position:absolute;
     content: '';
-    height:4px;
-    width: -40px;
-    bottom:480px;
-    background-color:rgb(0, 0, 0) ;
+    height:5px;
+    width: -50px;
+    bottom:395px;
+    color:white;
+    background-color:rgb(255, 0, 157) ;
 }
 h1{
     font-size: 80px;
     font-weight: 800;
-    margin-top: -30px;
+    margin-top: -20px;
     color: rgb(0, 0, 0);
     text-shadow: 0 0 5px rgb(255, 255, 255);
 }
@@ -110,7 +112,7 @@ h1{
 }
 a{
     display: block;
-    width:90%;
+    width:100%;
     font-size: 1.2rem;
     color:rgb(0, 0, 0);
     text-shadow:0 0 5px whitesmoke;
