--- a/css/anseph.css
+++ b/css/anseph.css
@@ -4,14 +4,30 @@
     padding:0;
     font-family: 'poppins' , sans-serif;
 }
-.container{
-    min-height: 100vh;
-    background-color: rgb(0, 0, 0);
+body{
+    overflow:hidden;
 }
+.header{
+ 
+        position: fixed;
+        top:0;
+        left:0;
+        width:100%;
+        padding: 20px 100px;
+        margin-left:-20px;
+        top:-35px;
+        background: transparent;
+        display: flex;
+        justify-content: space-between;
+        align-items: center;
+        z-index:100;
+        
+}
+
 nav{
     display: flex;
     width: 100%;
-    justify-content: space-around;
+    justify-content: space-between;
     height: 80px;
     line-height: 80px;
     z-index: 111;
@@ -22,7 +38,7 @@ nav{
     font-size: 30px;
     font-weight: 800;
     color: rgb(255, 255, 255);
-    margin-right:800px;
+    margin-right:300px;
     text-transform:uppercase;
     text-shadow: 0 0 5px rgb(255, 0, 157);
 }
@@ -35,7 +51,7 @@ b{
 }
 .navItems li{
     list-style: none;
-    margin: 0 15px;
+    margin: 0 1px;
 }
 .navItems li a{
     font-size: 25px;
@@ -94,18 +110,21 @@ animation: object2 6s linear infinite;
     content: '';
     height:5px;
     width: -50px;
-    bottom:395px;
+    margin-left: 150px;
+    bottom:420px;
     color:white;
     background-color:rgb(255, 0, 157) ;
 }
 h1{
     font-size: 80px;
     font-weight: 800;
-    margin-top: -20px;
+    margin-top: 635px;
+    margin-left: 150px;
     color: rgb(0, 0, 0);
     text-shadow: 0 0 5px rgb(255, 255, 255);
 }
 .multiText{
+
     color:rgb(255, 0, 157);
     text-transform: capitalize;
     text-shadow: 0 0 10px rgb(255, 54, 178);
@@ -113,13 +132,20 @@ h1{
 a{
     display: block;
     width:100%;
+    margin-left: 150px;
     font-size: 1.2rem;
     color:rgb(0, 0, 0);
-    text-shadow:0 0 5px whitesmoke;
+    text-shadow:0 0 10px whitesmoke;
 }
+section:nth-child(odd){
+    background-repeat:repeat;
+    background-size: cover;
+    background-image: url('https://wallpapercave.com/wp/wp2672074.jpg');
+}
+    
 .imgbox #me{
 
-    margin-left: 950px;
+    margin-left: 1000px;
     width:40%;
     height:55%;
     border-radius: 50%;
@@ -142,11 +168,11 @@ a{
     position: absolute;
     top: 50%;
     left: 50%;
-    transform: translate(-70%, -70%) rotate(60deg);
+    transform: translate(-50%, -50%) rotate(60deg);
     width: 40%;
     height:40%;
-    margin: 100px ;
-    margin-left: 500px ;
+    margin: 60px ;
+    margin-left: 420px ;
     filter: saturate(200%);
     animation: animate 4s linear infinite;
 }
@@ -168,4 +194,35 @@ a{
         left:35%;
         top: 10%;
     }
+}
+#about p{
+    color:white;
+    text-shadow:0 0  10px rgb(255, 0, 242);
+
+}
+#about .image1 img{
+    max-width: 200px;
+    margin: 0 30px
+}
+section {
+    display: flex;
+    flex-direction: column;
+    min-height: 100vh;
+    background-repeat: no-repeat;
+    margin: auto;
+    background-color: rgb(0, 0, 0);
+}  
+header .sticky{
+    padding: 0px 100px;
+
+}
+section .animate{
+    transition: 2s;
+
+}
+#about .animate{
+    transform: translateX(-100px);
+}
+#about.show-animate .animate{
+    transform: translateX(0);
 }
